# Projet-Arnaque-IPSSI

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/scripts/: tech_support_microsoft.yaml
src/scam_simulator/: __init__.py  config.py  logging_conf.py  main.py
src/scam_simulator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/scam_simulator/agents/: __init__.py  director_agent.py  moderator_agent.py  victim_agent.py
src/scam_simulator/llm/: __init__.py  memory.py  mock_chat.py  providers.py
src/scam_simulator/orchestration/: __init__.py  audience.py  loop.py  state.py
src/scam_simulator/prompts/: __init__.py  director_system.txt  loader.py  moderator_system.txt  victim_system.txt
src/scam_simulator/tools/: __init__.py  mcp_server.py  soundboard.py
src/scam_simulator/web/: __init__.py  app.py
